--- a/app/views/editar/editar_uf.ejs
+++ b/app/views/editar/editar_uf.ejs
@@ -3,24 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=], initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="crossorigin="anonymous"></script>
     <title>UF - Editar</title>
 </head>
 <body>
     <h1>Atualizar Unidade Federal</h1>
 
-    <form action="" method="post">
+    <form action="atualizar/<%= uf[0].SG_UF %>" method="post">
         
     <label>Nome</label>
-	<input type="text" id="nome" name="nome" value=""/>
+	<input type="text" id="nome" name="nome" />
     </br></br>
 
-    <label>Sigla UF</label>
-	<input type="text" id="sigla" name="sigla" value=""/>
-    </br></br>
 
     <input type="submit" >
-    <button>Deletar</button>
+    <button id="deletar">Deletar</button>
     </form>
 </body>
+<script>
+
+    $(document).ready(function(){
+       
+        var uf = '<%- JSON.stringify(uf[0]) %>';
+        uf = JSON.parse(uf);
+
+        $('#nome').val(uf.NM_UF);
+        
+
+
+        //Botão de deletar
+
+       $('#deletar').click(function(){
+            let check = confirm('Quer deletar amigao?');
+            
+            if(check){
+                $.ajax({
+                    url: '/uf/editar/deletar/' + uf.SG_UF  ,
+                    method: 'POST',
+                    success: response =>{
+                        console.log(response);
+
+                        setTimeout(function(){ 
+                            alert(response);
+                            location.href = '/uf';
+                        }, 1000);
+                    }
+                })
+            }
+       });
+    });    
+</script>
 </html>
