--- a/app/views/lista/aeroportos.ejs
+++ b/app/views/lista/aeroportos.ejs
@@ -7,6 +7,7 @@
     <title>Aeroportos</title>
 </head>
 <body>
+    <a href="/"> Home</a>
     <h1>Aeroportos</h1>
 
     <input type="text" name="busca" id="busca" required>
