--- a/app/views/lista/paises.ejs
+++ b/app/views/lista/paises.ejs
@@ -7,6 +7,8 @@
     <title>Países</title>
 </head>
 <body>
+
+    <a href="/"> Home</a>
     <h1>Países</h1>
 
         <input type="text" name="busca" id="busca">
@@ -41,7 +43,7 @@
                            
                             
                             <td> 
-                                <a href="/paises/editar/<%=paises[i].CD_PAIS %>">
+                                <a href="/paises/editar/<%= paises[i].CD_PAIS %>">
                                     <button type="button"> Editar</button></td>
                                 </a>
                                 
