--- a/app/views/lista/uf.ejs
+++ b/app/views/lista/uf.ejs
@@ -7,6 +7,9 @@
     <title>Unidades Federais</title>
 </head>
 <body>
+
+    <a href="/"> Home</a>
+
     <h1>Unidades Federais</h1>
 
     <input type="text" name="busca" id="busca" required>
