--- a/app/views/editar/editar_companhia.ejs
+++ b/app/views/editar/editar_companhia.ejs
@@ -3,33 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=], initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="crossorigin="anonymous"></script>
     <title>Companhia - Editar</title>
 </head>
 <body>
     <h1>Atualizar Companhia aérea</h1>
 
-    <form action="" method="post">
+    <form action="/companhias/editar/atualizar/<%= companhia[0].CD_CMPN_AEREA %>" method="post">
+    
+
+        <label>Cod. Companhia Aerea</label>
+        <input type="text" id="cod_companhia" name="cod_companhia" maxlength="2" value="<%= companhia[0].CD_CMPN_AEREA %>" readonly/>
+        </br></br>
+    
+        <label>Nome</label>
+        <input type="text" id="nome" name="nome" value="<%= companhia[0].NM_CMPN_AEREA %>" required/>
+        </br></br>
+
+        <label for="cod_pais">País</label>
+
+                <select name="cod_pais" id="cod_pais">
+                    <% for(var i=0;i< paises.length;i++){ %>
+                        <option value="<%= paises[i].codigo %>"><%= paises[i].nome %></option>
+                    <% } %>
+
+                </select>
+        </br></br>
+
+
+
+
+        <input type="submit" >
         
-    <label>Nome</label>
-	<input type="text" id="nome" name="nome" value=""/>
-    </br></br>
-
-    <label for="cod_pais">Cod. País</label>
-
-            <select name="pais" id="pais">
-            <option value="bra">BRA</option>
-            <option value="fra">FRA</option>
-            <option value="ita">ITA</option>
-
-            </select>
-    </br></br>
-
-
-
-
-    <input type="submit" >
-    <button>Deletar</button>
-    </form>
+    </form> <br>
+    <button id="deletar">Deletar</button>
 </body>
+<script>
+
+    $(document).ready(function(){
+        
+        var companhia = '<%- JSON.stringify(companhia[0]) %>';
+        companhia = JSON.parse(companhia);
+
+        $('#cod_pais').val(companhia.CD_PAIS);
+
+        $('#deletar').click(function(){
+            let check = confirm('Deseja deletar?');
+            
+            if(check){
+                $.ajax({
+                    url: '/companhias/editar/deletar/' + companhia.CD_CMPN_AEREA  ,
+                    method: 'POST',
+                    success: response =>{
+                        console.log(response);
+
+                        setTimeout(function(){ 
+                            alert(response);
+                            location.href = '/companhias';
+                        }, 1000);
+                    }
+                })
+            }
+       });
+    });
+</script>
 </html>
