--- a/app/views/editar/editar_reserva.ejs
+++ b/app/views/editar/editar_reserva.ejs
@@ -3,40 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=], initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="crossorigin="anonymous"></script>
     <title>Reserva - Editar</title>
 </head>
 <body>
     <h1>Atualizar Reserva</h1>
 
-    <form action="" method="post">
+    <form action="atualizar/<%= reservas[0].CD_PSGR %>_<%= reservas[0].NR_VOO %>_<%= reservas[0].DT_SAIDA_VOO.split('/') %>" method="post">
         <label>Nome passageiro</label>
-		<input type="text" id="nome" name="nome" value=""/>
+		<input type="text" id="nome" name="nome" readonly/>
     </br></br>
 
-    <label for="data_nasc">Data saída</label>
-        <input type="date" id="data_nasc" name="data_nasc" min="1910-01-01">
+    <label for="data">Data de saída</label>
+    <input type="text" name="data" id="data" placeholder="YYYY/MM/DD" 
+    required pattern="^\d{4}\/(0[1-9]|1[012])\/(0[1-9]|[12][0-9]|3[01])" 
+    title="Insira a data no formato YYYY/MM/DD" readonly/>
     </br></br>
 
-    <label for="cod_voo">Cod. Voo</label>
+    <label for="cod_voo">Número do Voo</label>
 
-            <select name="cod_voo" id="cod_voo">
-            <option value="sim">BOND007</option>
-           
+    <select name="cod_voo" id="cod_voo" readonly>
+        <% for(var i=0;i< voos.length;i++){ %>
+            <option value="<%= voos[i].num %>"><%= voos[i].num %></option>
+        <% } %>
 
-            </select>
-    </br></br>
+    </select>
+</br></br>
 
 
         <label>Desconto passagem</label>
-		<input type="text" id="desc_passagem" name="desc_passagem" value=""/>
+		<input type="text" id="desc_passagem" name="desc_passagem" />
     </br></br>
 
 
        
 
     <input type="submit" >
-    <button>Deletar</button>
+    <button id="deletar">Deletar</button>
     </form>
 </body>
+<script>
+
+    $(document).ready(function(){
+       
+        var reservas = '<%- JSON.stringify(reservas[0]) %>';
+        reservas = JSON.parse(reservas);
+
+        $('#nome').val(reservas.CD_PSGR);
+        $('#data').val(reservas.DT_SAIDA_VOO);
+        $('#cod_voo').val(reservas.NR_VOO);
+        $('#desc_passagem').val(reservas.PC_DESC_PASG);
+        
+
+
+        //Botão de deletar
+
+        var credenciais = reservas.CD_PSGR + '_' +  reservas.NR_VOO + '_' +  reservas.DT_SAIDA_VOO;
+        credenciais = credenciais.split('/');
+
+       $('#deletar').click(function(){
+            let check = confirm('Quer deletar amigao?');
+            
+            if(check){
+                $.ajax({
+                    url: '/reservas/editar/deletar/' + credenciais  ,
+                    method: 'POST',
+                    success: response =>{
+                        console.log(response);
+
+                        setTimeout(function(){ 
+                            alert(response);
+                            location.href = '/reservas';
+                        }, 1000);
+                    }
+                })
+            }
+       });
+    });    
+</script>
 </html>
