--- a/app/views/lista/companhias.ejs
+++ b/app/views/lista/companhias.ejs
@@ -7,6 +7,7 @@
     <title>Companhias aéreas</title>
 </head>
 <body>
+    <a href="/"> Home</a>
     <h1>Companhias aéreas</h1>
 
     <h2>Filtros</h2>
@@ -57,7 +58,7 @@
                         
                         
                         <td> 
-                            <a href="/voos/editar/<%=companhias[i].CD_CMPN_AEREA %>">
+                            <a href="/companhias/editar/<%=companhias[i].CD_CMPN_AEREA %>">
                                 <button type="button"> Editar</button></td>
                             </a>
                             
